Update and rename index.php to index.html
Signed-off-by: ramune108 <86900934+ramune108@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1>モンティ・カルロ法による円周率の計算</h1>
-    <canvas id="canvas"></canvas>
+    <div id="canvas"></div>
     <button onclick="start()">計算開始</button>
     <p id="result"></p>
 
