--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1>モンティ・カルロ法による円周率の計算</h1>
-    <div id="canvas"></div>
+    <canvas id="canvas"></canvas>
     <button onclick="start()">計算開始</button>
     <p id="result"></p>
 
