--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           total++;
         }
 
-        const pi = (10 * count) / total;
-        document.getElementById("result").textContent = `π ≈ ${pi}`;
+　　　　const pi = (4 * count) / total;
+　　　　document.getElementById("result").textContent = `π ≈ ${pi.toFixed(10)}`;
       }
     </script>
   </body>
