--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           total++;
         }
 
-　　　　const pi = (4 * count) / total;
-　　　　document.getElementById("result").textContent = `π ≈ ${pi.toFixed(10)}`;
+　　　　  const pi = (4 * count) / total;
+        document.getElementById("result").textContent = `π ≈ ${pi}`;
       }
     </script>
   </body>
