--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>モンテカルロ法による円周率の計算</title>
+    <title>モンテカロル法による円周率の計算</title>
     <style>
       #canvas {
         position: absolute;
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <h1>モンテカルロ法による円周率の計算</h1>
+    <h1>モンテカロル法による円周率の計算</h1>
     <canvas id="canvas"></canvas>
     <button onclick="start()">計算開始</button>
     <p id="result"></p>
