--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>モンテカロル法による円周率の計算</title>
+    <title>モンテカルロ法による円周率の計算</title>
     <style>
       #canvas {
         position: absolute;
@@ -12,10 +12,10 @@
     </style>
   </head>
   <body>
-    <h1>モンテカロル法による円周率の計算</h1>
+    <h1>モンテカルロ法による円周率の計算</h1>
     <canvas id="canvas"></canvas>
     <button onclick="start()">計算開始</button>
-    <p id="result"></p>
+    <ul id="results"></ul>
 
     <script>
       function start() {
@@ -53,7 +53,9 @@
         }
 
         const pi = (4 * count) / total;
-        document.getElementById("result").textContent = `n = ${n}, π ≈ ${pi.toFixed(10)}`;
+        const result = document.createElement("li");
+        result.textContent = `n = ${n}, π ≈ ${pi.toFixed(10)}`;
+        document.getElementById("results").appendChild(result);
       }
     </script>
   </body>
