--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           const dx = x - width / 2;
           const dy = y - height / 2;
           if (dx * dx + dy * dy < (width / 2) * (width / 2)) {
-            context.fillStyle = "#00FF00"; // 緑を黒に変更
+            context.fillStyle = "#9b2321";
             count++;
           } else {
-            context.fillStyle = "#000000"; // 黒を緑に変更
+            context.fillStyle = "#66e4e3";
           }
           context.beginPath();
           context.arc(x, y, 1, 0, 2 * Math.PI);
