--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             context.fillStyle = "#27f06a";
             count++;
           } else {
-            context.fillStyle = "#d70093";
+            context.fillStyle = "#000000";
           }
           context.beginPath();
           context.arc(x, y, 1, 0, 2 * Math.PI);
