--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           const dx = x - width / 2;
           const dy = y - height / 2;
           if (dx * dx + dy * dy < (width / 2) * (width / 2)) {
-            context.fillStyle = "#27f06a";
+            context.fillStyle = "#222785";
             count++;
           } else {
-            context.fillStyle = "#000000";
+            context.fillStyle = "#e5dc7a";
           }
           context.beginPath();
           context.arc(x, y, 1, 0, 2 * Math.PI);
