--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lg=ja>
+<html　lg=utf8>
   <head>
     <title>モンテカルロ法による円周率の計算</title>
     <style>
@@ -9,25 +9,13 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
-
-      ul {
-        position: absolute;
-        top: 550px;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        margin: 0;
-        padding: 0;
-        list-style: none;
-      }
-
-      body {
-        background-color: #F2F2F2;
-      }
     </style>
   </head>
   <body>
     <h1>モンテカルロ法による円周率の計算</h1>
     <canvas id="canvas"></canvas>
+    <label>試行回数: </label>
+    <input type="number" id="n" value="1000000">
     <button onclick="start()">計算開始</button>
     <ul id="results"></ul>
 
@@ -48,7 +36,7 @@
 
         let count = 0;
         let total = 0;
-        const n = document.getElementById("numTrials").value;
+        const n = document.getElementById("n").value;
         for (let i = 0; i < n; i++) {
           const x = Math.random() * width;
           const y = Math.random() * height;
@@ -67,4 +55,10 @@
         }
 
         const pi = (4 * count) / total;
-        const result
+        const result = document.createElement("li");
+        result.textContent = `n = ${n}, π ≈ ${pi.toFixed(10)}`;
+        document.getElementById("results").appendChild(result);
+      }
+    </script>
+  </body>
+</html>
