--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html　lg=utf8>
+<html　lg=ja>
   <head>
+    <meta charset="UTF-8">
     <title>モンテカルロ法による円周率の計算</title>
     <style>
       #canvas {
