--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html　lg=ja>
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
     <title>モンテカルロ法による円周率の計算</title>
@@ -10,6 +10,20 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
+      table {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        border-collapse: collapse;
+        width: 50%;
+      }
+      th, td {
+        padding: 10px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+      }
+      th {
+        background-color: #f2f2f2;
+      }
     </style>
   </head>
   <body>
@@ -18,7 +32,17 @@
     <label>試行回数: </label>
     <input type="number" id="n" value="1000000">
     <button onclick="start()">計算開始</button>
-    <ul id="results"></ul>
+
+    <table id="results">
+      <thead>
+        <tr>
+          <th>試行回数</th>
+          <th>計算結果</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
 
     <script>
       function start() {
@@ -56,9 +80,14 @@
         }
 
         const pi = (4 * count) / total;
-        const result = document.createElement("li");
-        result.textContent = `n = ${n}, π ≈ ${pi.toFixed(10)}`;
-        document.getElementById("results").appendChild(result);
+        const result = document.createElement("tr");
+        const nColumn = document.createElement("td");
+        const piColumn = document.createElement("td");
+        nColumn.textContent = n;
+        piColumn.textContent = pi.toFixed(10);
+        result.appendChild(nColumn);
+        result.appendChild(piColumn);
+        document.querySelector("#results tbody").appendChild(result);
       }
     </script>
   </body>
