--- a/index.html
+++ b/index.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lg=ja>
   <head>
     <meta charset="UTF-8">
     <title>モンテカルロ法による円周率の計算</title>
     <style>
-      body {
-        background-color: #eedcb3;
-      }
       #canvas {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
       }
-      #table {
-        float: right;
-        margin-right: 20px;
-        margin-top: 20px;
-      }
-      #table td {
-        width: 80px;
-        height: 80px;
-      }
-      .red {
-        background-color: #9b2321;
-      }
-      .blue {
-        background-color: #66e4e3;
+      body {
+        background-color: #eedcb3;
       }
     </style>
   </head>
@@ -36,16 +21,6 @@
     <label>試行回数: </label>
     <input type="number" id="n" value="1000000">
     <button onclick="start()">計算開始</button>
-    <table id="table">
-      <tr>
-        <td class="red"></td>
-        <td>円の内部</td>
-      </tr>
-      <tr>
-        <td class="blue"></td>
-        <td>円の外部</td>
-      </tr>
-    </table>
     <ul id="results"></ul>
 
     <script>
