--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         border-bottom: 1px solid #ddd;
       }
       th {
-        background-color: #f2f2f2;
+        background-color: #eedcb3;
       }
     </style>
   </head>
