--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         border-bottom: 1px solid #ddd;
       }
       th {
-        background-color: #eedcb3;
+        background-color: #00ff00;
       }
+      body {
+        background-color: #eedcb3;
+  　　}
     </style>
   </head>
   <body>
