--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         border-bottom: 1px solid #ddd;
       }
       th {
-        background-color: #00ff00;
+        background-color: #F5F5F5;
       }
       body {
         background-color: #eedcb3;
