--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
         left: 50%;
         transform: translate(-50%, -50%);
          }      
-      h1 {
-      　padding: 0.4em 0.5em;/*文字の上下 左右の余白*/
-      　color: #494949;/*文字色*/
-      　background: #f4f4f4;/*背景色*/
-      　border-left: solid 5px #7db4e6;/*左線*/
-      　border-bottom: solid 3px #d7d7d7;/*下線*/
-    　}
+      
+      table {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-collapse: collapse;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
      
       table {
         margin-top: 50px;
