--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-         }      
-      
+      }
       table {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  border-collapse: collapse;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-}
+        margin-top: 50px;
+        margin-bottom: 50px;
+        border-collapse: collapse;
+        width: 50%;
+      }
       th, td {
         padding: 10px;
         text-align: left;
         border-bottom: 1px solid #ddd;
       }
+      h1 {
+      　padding: 0.4em 0.5em;/*文字の上下 左右の余白*/
+      　color: #494949;/*文字色*/
+      　background: #f4f4f4;/*背景色*/
+      　border-left: solid 5px #7db4e6;/*左線*/
+      　border-bottom: solid 3px #d7d7d7;/*下線*/
+    　}
       th {
         background-color: #F5F5F5;
       }
@@ -34,11 +38,6 @@
   </head>
   <body>
     <h1>モンテカルロ法による円周率の計算</h1>
-    <canvas id="canvas"></canvas>
-    <label>試行回数: </label>
-    <input type="number" id="n" value="1000000">
-    <button onclick="start()">計算開始</button>
-
     <table id="results">
       <thead>
         <tr>
@@ -49,6 +48,10 @@
       <tbody>
       </tbody>
     </table>
+    <canvas id="canvas"></canvas>
+    <label>試行回数: </label>
+    <input type="number" id="n" value="1000000">
+    <button onclick="start()">計算開始</button>
 
     <script>
       function start() {
@@ -85,7 +88,7 @@
           total++;
         }
 
-        const pi = (4 * count) / total;
+        const pi = (4 * count) / total
         const result = document.createElement("tr");
         const nColumn = document.createElement("td");
         const piColumn = document.createElement("td");
