--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <title>モンテカルロ法による円周率の計算</title>
     <style>
       #canvas {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        display: block;
+        margin: 0 auto;
       }
-      table {
+      #results {
+        float: left;
         margin-top: 50px;
         margin-bottom: 50px;
         border-collapse: collapse;
-        width: 50%;
+        width: 40%;
+        margin-right: 20px;
       }
       th, td {
         padding: 10px;
